--- a/modules/ui.styl
+++ b/modules/ui.styl
@@ -126,8 +126,8 @@
     content: ''
     background-color: var(--color-black-soft)
     border-radius: 50%
-    width 1cap
-    height: 1cap
+    width: 0.7em
+    height: 0.7em
     display: inline-block
     margin-right: .25rem
 
